Added new feature to portfolio

--- a/frontend/public/assets/kit-098a6cd2de-web/metadata/categories.yml
+++ b/frontend/public/assets/kit-098a6cd2de-web/metadata/categories.yml
@@ -61,6 +61,10 @@ science-fiction:
   icons:
     - ufo
   label: Science Fiction
+social:
+  icons:
+    - share-nodes
+  label: Social
 spinners:
   icons:
     - sun
